# OOP_7Laba

./: BalagurFate3  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  log.txt
include/: BattleVisitor.h  NPC.h  NPCFactory.h  NPCManager.h  Observer.h
src/: BattleVisitor.cpp  NPC.cpp  NPCFactory.cpp  NPCManager.cpp  Observer.cpp  game  main.cpp
tests/: test.cpp
